# mini-riser

./: .gitignore  CMakeLists.txt  README.md  claude.md  debug-ui.html  installer.iss
.claude/: settings.local.json
source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
source/ui/public/: index.html
source/ui/public/css/: styles.css
source/ui/public/js/: index.js
